# finance-mosaix

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  create_sample_database.py  pyproject.toml  pytest.ini  requirements.txt  start_dashboard.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/knowledge/: ChirpyDocsKnowledge.md  DataBaseSetup.md  electron-python-runtime.md
.github/workflows/: electron-package.yml  package.yml  pages.yml  pytest.yml  release-please.yml
dashboard/: README.md  __init__.py  app.py  charts.py  charts_pyplot.py  create_sample_database.py  data.py  data_creator.py  data_editor.py  data_organizer.py  import.py  metrics.py  onboarding.py  settings.py  sheets.py
docs/: Gemfile  _config.yml  architecture.md  cli.md  dashboard.md  data-flow.md  index.md  installation.md  start-jekyll.ps1  usage.md
docs/_data/: contact.yml
docs/_includes/: toc.html  trending-tags.html  update-list.html
docs/_layouts/: page.html
docs/_plugins/: last_modified_at_override.rb
docs/assets/: 404.html
electron/: build-python-runtime.sh  build_python_runtime.py  generate-icon.js  icon-usage-note.md  main.js  package-lock.json  package.json  preload.js  sync_version.js
import/: SampleDE.xlsx  SampleEN.xlsx
knowledge/: DashboardChartsNMetrics.md  DataBaseMigrationKnowledge.md
src/: README.md  __init__.py  account_balance_queries.py  cash_queries.py  db_migrate.py  db_schema.py  finance_cli.py  goods_depreciation.py  goods_queries.py  import_transactions.py  interest_queries.py  query_finance.py  stock_queries.py  version.py
test/: __init__.py  test_helpers.py  test_importer.py  test_queries.py  test_schema.py  test_version_sync.py
