[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools_scm>=7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-mosaix"
dynamic = ["version"]
description = "A DuckDB-backed personal finance toolkit with Excel import workflows, CLI utilities, and a Streamlit dashboard."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Developer-Simon" }]
requires-python = ">=3.11"
keywords = ["finance", "duckdb", "streamlit", "dashboard", "personal finance", "budget", "reports"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Financial",
  "Programming Language :: Python :: 3.11",
  "Environment :: Console",
  "Framework :: Streamlit",
]
urls = { Homepage = "https://github.com/Developer-Simon/finance-mosaix", Repository = "https://github.com/Developer-Simon/finance-mosaix", Documentation = "https://github.com/Developer-Simon/finance-mosaix/tree/main/docs", "Bug Tracker" = "https://github.com/Developer-Simon/finance-mosaix/issues" }

dependencies = [
  "pandas>=2.0,<3.0",
  "openpyxl>=3.1,<4.0",
  "duckdb>=1.0,<2.0",
  "streamlit>=1.20,<2.0",
  "altair>=5.0,<6.0",
  "matplotlib>=3.7,<4.0",
  "seaborn>=0.12,<1.0",
  "numpy>=1.25,<2.0",
]

optional-dependencies = { test = ["pytest>=7.0,<9.0"], dev = ["pytest>=7.0,<9.0", "setuptools_scm>=7.1"], docs = [] }

[project.scripts]
finance-mosaix = "src.finance_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboard*"]

[tool.setuptools_scm]
fallback_version = "0.2.0"
local_scheme = "dirty-tag"
version_scheme = "guess-next-dev"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["test"]
python_files = ["test_*.py"]
pythonpath = ["src"]
markers = [
  "integration: marks tests as integration / slower tests that exercise the full importer",
]
